# AI-Augmented-Swing-Trading-System

./: .gitignore  Framework.md  README.md  README_CN.md  config.example.env  pyproject.toml
.github/workflows/: ci.yml
data/journal/: .gitkeep
src/ai_trading/: __init__.py  config.py  main.py  pipeline.py  types.py
src/ai_trading/ai/: __init__.py  openrouter_client.py  schemas.py
src/ai_trading/backtest/: __init__.py  ai_provider.py  data.py  metrics.py  runner.py  types.py
src/ai_trading/data/: __init__.py  binance.py
src/ai_trading/exec/: __init__.py  binance_live.py  paper.py
src/ai_trading/features/: __init__.py  indicators.py
src/ai_trading/journal/: __init__.py  store.py
src/ai_trading/risk/: rules.py
src/ai_trading/strategy/: candidates.py
src/ai_trading/utils/: logging.py
tests/: test_ai_schemas.py  test_backtest_metrics.py  test_backtest_runner.py  test_cli_smoke.py  test_indicators_and_candidates.py  test_pipeline_integration.py  test_risk_rules.py
