[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ai-trading"
version = "0.1.0"
description = "AI-Augmented Swing Trading System for BTC/ETH"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "AI Trading Team" }
]

dependencies = [
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "httpx>=0.25.0",
    "pandas>=2.1.0",
    "numpy>=1.24.0",
    "python-dotenv>=1.0.0",
    "tenacity>=8.2.0",
    "click>=8.1.0",
    "structlog>=23.2.0",
    "python-binance>=1.0.19",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
]

[project.scripts]
ai-trading = "ai_trading.main:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/ai_trading"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.mypy]
python_version = "3.10"
strict = true
